force-app/main/default/objects/Subjects__c/fields/End_Date_to_Complete_the_Syllabus__c.field-meta.xml
<CustomField>
    <fullName>End_Date_to_Complete_the_Syllabus__c</fullName>
    <description>The End Date to Complete the Syllabus of the Subject</description>
    <label>End Date to Complete the Syllabus</label>
    <type>Date</type>
</CustomField>