force-app/main/default/objects/Subjects__c/fields/Pass_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Pass_Percentage__c</fullName>
    <description>The Pass percentage of the Subjects</description>
    <label>Pass Percentage</label>
    <precision>16</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>