force-app/main/default/objects/Subjects__c/fields/Sub_Teacher__c.field-meta.xml
<CustomField>
    <fullName>Sub_Teacher__c</fullName>
    <description>Subject though by Which Teacher</description>
    <label>Sub_Teacher</label>
    <length>32</length>
    <type>Text</type>
</CustomField>