force-app/main/default/objects/Subjects__c/fields/Subjects__c.field-meta.xml
<CustomField>
    <fullName>Subjects__c</fullName>
    <description>There are the Subjects Teached in the School</description>
    <label>Subjects</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Telugu,</fullName>
            </value>
            <value>
                <fullName>Hindi,</fullName>
            </value>
            <value>
                <fullName>English,</fullName>
            </value>
            <value>
                <fullName>Math&apos;s,</fullName>
            </value>
            <value>
                <fullName>Science,</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>