force-app/main/default/objects/Subjects__c/fields/Syllabus__c.field-meta.xml
<CustomField>
    <fullName>Syllabus__c</fullName>
    <description>Subject Syllabus</description>
    <label>Syllabus</label>
    <length>200</length>
    <type>Text</type>
</CustomField>